Refactor Telegram API exception handling to remove redundant try-catch blocks, image AI support